k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexushotel-web-svc
  namespace: nexushotel
  labels:
    app: nexushotel-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: http
  selector:
    app: nexushotel-web
